[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "2.0.0"
clap = { version = "4.0.29", features = ["cargo"] }
comfy-table = "6.1.3"
itertools = "0.10.5"
rayon = "1.8.0"
rustc-hash = "1.1.0"
quote = "1.0"
strength_reduce = "0.2.4"
paste = "1.0.14"


[profile.release]
debug = true
